--- a/src/cliplugin/Gopkg.toml
+++ b/src/cliplugin/Gopkg.toml
@@ -37,6 +37,10 @@
   name = "github.com/onsi/gomega"
   version = "1.4.1"
 
+[[override]]
+  name = "gopkg.in/fsnotify.v1"
+  source = "https://github.com/fsnotify/fsnotify.git"
+
 [prune]
   go-tests = true
   unused-packages = true
