CI: update dependabot
* Also update GH actions.
* Run dependabot weekly rather than daily.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,12 @@
 ---
 version: 2
 updates:
-  - package-ecosystem: "gomod"
-    open-pull-requests-limit: 100
+  - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+
+  - package-ecosystem: "gomod"
+    directory: "/"
+    schedule:
+      interval: "weekly"
