--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,7 @@ jobs:
     - uses: actions/setup-go@v3
       with:
         go-version-file: go.mod
+        check-latest: true
     - run: go test -v -race ./...
 
   lint:
@@ -33,6 +34,7 @@ jobs:
     - uses: actions/setup-go@v3
       with:
         go-version-file: go.mod
+        check-latest: true
     - uses: golangci/golangci-lint-action@v3.3.0
       with:
         args: --timeout 5m
